--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,9 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.greasemonk.timetable.MainActivity">
+        tools:context="com.greasemonk.timetable.app.MainActivity">
 
-    <TextView
-            android:text="Hello World!"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <com.greasemonk.timetable.TimeTable android:id="@+id/time_table"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"/>
 </RelativeLayout>
